<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="10" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            android:columnCount="3"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,NestedWeights">

            <TextView
                android:id="@+id/textViewAnswerShow1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow1"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow2"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow2"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow3"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow3"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow4"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow4"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow5"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow5"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow6"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow6"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow7"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow7"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow8"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow8"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow9"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow9"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow10"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:text="@string/textViewAnswerShow10"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow11"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow11"
                android:visibility="invisible"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewAnswerShow12"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/textViewAnswerShow12"
                android:visibility="invisible"
                android:textSize="14sp" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/textViewAnswerShowMain"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="3"
                android:text="@string/textViewAnswerShowBasic"


                android:textSize="34sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:autofillHints="@string/str_enter"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxWidth="30dp"
                android:maxLength="3"
                android:textSize="34sp"
                android:hint="@string/str_enter"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>



        <GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:columnCount="5"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,NestedWeights">
            <Space
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />

            <Button
                android:id="@+id/buttonDigit1"
                android:text="@string/buttonDigit1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/buttonDigit2"
                android:text="@string/buttonDigit2"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/buttonDigit3"
                android:text="@string/buttonDigit3"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>
            <Space
                android:layout_row="0"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />
            <Space
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />

            <Button
                android:id="@+id/buttonDigit4"
                android:text="@string/buttonDigit4"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonDigit5"
                android:text="@string/buttonDigit5"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonDigit6"
                android:text="@string/buttonDigit6"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>
            <Space
                android:layout_row="1"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />
            <Space
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />
            <Button
                android:id="@+id/buttonDigit7"
                android:text="@string/buttonDigit7"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonDigit8"
                android:text="@string/buttonDigit8"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonDigit9"
                android:text="@string/buttonDigit9"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>
            <Space
                android:layout_row="2"
                android:layout_column="4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />
            <Space
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />

            <Button
                android:id="@+id/buttonDigit0"
                android:text="@string/buttonDigit0"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonEnter"
                android:text="@string/buttonEnter"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:textSize="14sp"/>

        </GridLayout>


    </LinearLayout>


</LinearLayout>
